--- a/music_app/app/views/layouts/application.html.erb
+++ b/music_app/app/views/layouts/application.html.erb
@@ -10,6 +10,16 @@
   </head>
 
   <body>
-    <%= yield %>
+  <% if logged_in?%>
+  current User email: <%= current_user.email %>
+  
+<form action="<%=session_url%>" method="POST">
+<input type="hidden" name="authenticity_token" value = "form_authenticity_token">
+<input type="hidden" name="_method" value = "DELETE">
+<input type="submit" value="Log Out">
+
+</form>
+  <% end%>  
+  <%= yield %>
   </body>
 </html>
