--- a/music_app/app/views/users/show.html.erb
+++ b/music_app/app/views/users/show.html.erb
@@ -1,3 +1,3 @@
 <h1> Welcome user <%= @user.email %> </h1>
-<h1> Welcome user <%= @user.password_digest %> </h1>
+<h1> Welcome user <%= @user.session_token %> </h1>
 <h1> Welcome user <%= @user.id %> </h1>
